# ruble_backend

./: .gitignore  MEDIA_FIX_GUIDE.md  Makefile  docker-compose.prod.yml  docker-compose.yml  env.prod.example
backend/: .env.example  Dockerfile  Makefile  alembic.ini  capture_auth.py  probe_500.py  pyproject.toml  seed_campaign_documents.py  seed_local.py  seed_media.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_media_assets.py  003_media_asset_type_audio.py  004_media_asset_type_image.py  005_documents.py  006_anonymous_users.py  007_payment_methods.py  008_user_last_seen_and_pm_fingerprint.py  009_campaign_document_slug.py  010_campaign_document_content.py
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  pagination.py  security.py  slug.py
backend/app/domain/: campaign.py  constants.py  media.py  payment.py  subscription.py
backend/app/infrastructure/: email.py  pdf.py
backend/app/models/: __init__.py  achievement.py  admin.py  allocation_change.py  base.py  campaign.py  campaign_donor.py  document.py  donation.py  foundation.py  media_asset.py  notification_log.py  offline_payment.py  patron_payment_link.py  payment_method.py  payout_record.py  refresh_token.py  subscription.py  thanks_content_shown.py  transaction.py  user.py
backend/app/repositories/: achievement_repo.py  admin_repo.py  base.py  campaign_repo.py  document_repo.py  foundation_repo.py  log_repo.py  media_repo.py  (+3 more)
backend/scripts/: setup_test_env.sh
backend/tests/: conftest.py  test_pdf.py
(+171 files in other folders)
